k8s/header_analyzer/header-analyzer.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: header-analyzer
spec:
  replicas: 1
  selector:
    matchLabels:
      app: header-analyzer
  template:
    metadata:
      labels:
        app: header-analyzer
    spec:
      containers:
        - name: header-analyzer
          image: giovaz94/mail-pipeline-general
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 80
      restartPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: header-analyzer-service
  annotations:
      prometheus.io/scrape: "true"
      prometheus.io/port: "80"
      prometheus.io/path: "/metrics"   # optional, defaults to /metrics
spec:
  selector:
    app: header-analyzer
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
---
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: header-analyzer-service
spec:
  host: header-analyzer-service
  trafficPolicy:
    loadBalancer:
      simple: LEAST_REQUEST
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: header-analyzer-service
spec:
  hosts:
    - header-analyzer-service
  http:
    - route:
        - destination:
            host: header-analyzer-service
